@@ -14,6 +14,7 @@ Released: not released yet
 - fixed bug in detection of empty string in host_vars host name in read_config
 - fixed bug in detection of empty string in role_vars role name in read_config
 - fixed bug in append_line if last line of text does not end with newline char
+- fixed bug in render_template, now last newline char not stripped by jinja2
 - fixed bugs in mv / stat / ... calls for file names started with '-' symbol
 - all writes to local/remote files preserve extended attributes of these files
 - conf now provides all correct methods to work like Python built-in dict type
